--- a/src/Style/mixin.scss
+++ b/src/Style/mixin.scss
@@ -23,6 +23,7 @@ $fc:#fff;
     -moz-box-shadow: $h $v $blur $spread $color $inset;
 }
 
+// 渐变
 @mixin gradientsss($start, $end, $sColor, $endR, $endG, $endB, $endA){
     background: #ccc;
     background: -moz-linear-gradient(top,  #000000 0%, #ffffff 100%);
