--- a/src/Components/Common/RightPlug/Rightplug.scss
+++ b/src/Components/Common/RightPlug/Rightplug.scss
@@ -18,6 +18,10 @@
                 cursor: pointer;
                 background-color: #A30404;
             }
+            a{
+                display: inline-block;
+                width: 100%;
+            }
         }
         img{
             vertical-align: middle;
