--- a/src/Components/Report/DayRate/DayRate.scss
+++ b/src/Components/Report/DayRate/DayRate.scss
@@ -1,7 +1,7 @@
 @import '../../../Style/variables';
 @import '../../../Style/mixin';
 
-.dividend_main{
+.dayRate_main{
     color: $color_363636;
     .team_list_top{
         padding: 30px 30px 13px;
