--- a/src/Components/Report/DayRate/DayRate.scss
+++ b/src/Components/Report/DayRate/DayRate.scss
@@ -42,13 +42,32 @@
             border: 1px solid #ccc;
             background-color: #fff;
             padding:8px 5px;
+            table{
+                border-collapse:collapse;
+            }
+            thead tr{
+                //border: 1px solid red;
+            }
         }
         .t_l_page{
             margin-top: 8px;
         }
     }
+    .tfoot_list{
+        li{
+            float: left;
+            width: 129px;
+            text-align: center;
+            &:first-child{
+                width: 250px;
+            }
+            &:last-child{
+                width: 190px;
+            }
+        }
+
+    }
     .ant-table-thead > tr > th, .ant-table-footer{
         background-color: #F8F7F4;
-        padding: 11px 8px;
     }
 }
